# runk

./: Cargo.toml  README.md
.github/: manual.sh
.github/workflows/: rust.yml
docs/: function-list.md
examples/: example.runk  fibonacci.runk  original_concept.runk  test.runk
examples/factorial/: factorial.runk  input.txt  output.txt
examples/fibonacci/: fibonacci.runk  input.txt  output.txt
src/: expressions.rs  lib.rs  main.rs  parser.rs  prints.rs  runk.rs  structs.rs  types.rs
src/parser/: rtoken.rs
src/structs/: assign.rs  func.rs  line.rs  mod.rs  optresult.rs  program_data.rs  source_info.rs  var.rs  word.rs
src/structs/func/: add.rs  debug.rs  div.rs  func_return.rs  jump.rs  jumpnz.rs  mul.rs  out.rs  primitives.rs  sub.rs
src/structs/func/primitives/: add.rs  and.rs  bin.rs  cat.rs  cats.rs  debug.rs  div.rs  equal.rs  err.rs  exit.rs  go.rs  goif.rs  greater.rs  greater_equal.rs  in.rs  int.rs  jump.rs  jumpnz.rs  lesser.rs  lesser_equal.rs  line.rs  lines.rs  mul.rs  n.rs  nat.rs  not.rs  not_equal.rs  num.rs  or.rs  out.rs  sub.rs
