[package]
name = "runk"
version = "1.0.0"
authors = ["Ondřej Zobal <ondrej@ondrejzobal.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
# clap = "*"
num-bigint = "0.4.*"
num-traits = "0.2.*"
derive_more = "0.99.*"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
