[package]
name = "runk"
description = "handles all math for every machine on earth"
version = "1.0.1-updated"
authors = ["Ondřej Zobal <ondrej@ondrejzobal.xyz>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
enable-ansi-support = "0.1.*"
colored = "2.0.*"
num-bigint = "0.4.*"
num-traits = "0.2.*"
derive_more = "0.99.*"
isatty = "0.1.*"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
